--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -36,16 +36,6 @@
       }
 
       &__contact {
-        display: flex;
-
-        &__telephone {
-          flex: 1;
-          margin-right: 15px;
-        }
-
-        &__fax {
-          flex: 1;
-        }
       }
 
       &__primary-contact {
