--- a/app/styles/content.scss
+++ b/app/styles/content.scss
@@ -230,7 +230,9 @@
 
     &__sidebar {
       float: none;
-      margin: 40px 0 0 20px;
+      margin: 40px 0 0 0;
+      border-left: 0px;
+      padding: 0px;
     }
 
     &__image {
